@@ -1,3 +1,7 @@
+2012-05-29  Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Added check to avoid overwriting imported records' pid, references #31787
+
 2012-05-25  Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Used SwiftMailer for reporting mail, resolves #13711
